--- a/android-engineer.html
+++ b/android-engineer.html
@@ -91,11 +91,11 @@
 <p>Oct 14, 2019 ... We are a leading digital bank on a mission to disrupt the banking industry. We've 
 built an app with smart money management tools to help our customers live a?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang/jobs/1918818'>Job Application for Principal, Android Engineer (Delivery Device Service) at Coupang</a></h5> 
+<h5><a href='https://boards.greenhouse.io/coupang/jobs/1918818'>Job Application for Principal, Android Engineer (Delivery Device Service) at Coupang</a></h5> 
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twitch/jobs/4493868002'>Job Application for Android Engineer at Twitch</a></h5> 
+<h5><a href='https://boards.greenhouse.io/twitch/jobs/4493868002'>Job Application for Android Engineer at Twitch</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -111,7 +111,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">France France Paris, France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/trek-bicycle-de/job/o4robfwO'>Trek Bicycle Karrieren?Android Mobile Software Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/trek-bicycle-de/job/o4robfwO'>Trek Bicycle Karrieren?Android Mobile Software Engineer</a></h5> 
 <p><span class="badge badge-light">Waterloo, Wisconsin</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -127,7 +127,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/foodpandaphilippines/jobs/1803359'>Job Application for Senior Android Engineer - Singapore Based at foodpanda Philippines</a></h5> 
+<h5><a href='https://boards.greenhouse.io/foodpandaphilippines/jobs/1803359'>Job Application for Senior Android Engineer - Singapore Based at foodpanda Philippines</a></h5> 
 <p><span class="badge badge-light">Singapore Philippines  Singapore Philippines Singapore  Singapore</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -302,7 +302,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lextechglobalservices/jobs/4475163002'>Job Application for Android/Kotlin Software Engineer - Contractor at Lextech Global Services</a></h5> 
+<h5><a href='https://boards.greenhouse.io/lextechglobalservices/jobs/4475163002'>Job Application for Android/Kotlin Software Engineer - Contractor at Lextech Global Services</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -398,7 +398,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/xfers/b34a45b5-9c54-4a9c-bd77-c86f49c883ce'>Xfers - Senior Android Engineer - Singapore</a></h5> 
+<h5><a href='https://jobs.lever.co/xfers/b34a45b5-9c54-4a9c-bd77-c86f49c883ce'>Xfers - Senior Android Engineer - Singapore</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -406,7 +406,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Waltham, MA</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://razorpay.recruiterbox.com/jobs/fk03w86/'>
+<h5><a href='https://razorpay.recruiterbox.com/jobs/fk03w86/'>
     Senior Android Engineer at Razorpay
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
@@ -420,7 +420,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Charlotte, NC  Canada</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
-<h5><a href='https://www.42jobs.io/android/jobs/8255-android-platform-engineer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.42jobs.io/android/jobs/8255-android-platform-engineer'>
 Android Platform Engineer at TomTom in  | Android jobs | 42jobs.io
 
 </a></h5> 
