--- a/deep-learning.html
+++ b/deep-learning.html
@@ -75,7 +75,7 @@
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698543439-data-scientist-deep-learning'>Bosch Group Data Scientist ? Deep Learning | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698543439-data-scientist-deep-learning'>Bosch Group Data Scientist ? Deep Learning | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -98,7 +98,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697984720-deep-learning-engineer'>Bosch Group Deep Learning Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697984720-deep-learning-engineer'>Bosch Group Deep Learning Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -174,7 +174,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<h5><a href='https://crisalix.workable.com/jobs/1146540'>Deep Learning Engineer with Strong iOS ... - Crisalix - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/jobs/1146540'>Deep Learning Engineer with Strong iOS ... - Crisalix - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 7, 2019 ... Apply online for the job of Deep Learning Engineer with Strong iOS Development 
 Skills at Crisalix.</p>
@@ -187,11 +187,11 @@ Skills at Crisalix.</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aluperf.referrals.selectminds.com/jobs/bell-labs-internship-mobility-robustness-optimization-through-deep-reinforcement-learning-36253'>Bell Labs Internship - Mobility Robustness Optimization through Deep Reinforcement Learning - Nokia Careers</a></h5> 
+<h5><a href='https://aluperf.referrals.selectminds.com/jobs/bell-labs-internship-mobility-robustness-optimization-through-deep-reinforcement-learning-36253'>Bell Labs Internship - Mobility Robustness Optimization through Deep Reinforcement Learning - Nokia Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697330844-working-student-deep-learning-ai-computer-vision-data-management'>Bosch Group Working student Deep Learning - AI - Computer Vision - Data Management | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697330844-working-student-deep-learning-ai-computer-vision-data-management'>Bosch Group Working student Deep Learning - AI - Computer Vision - Data Management | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -232,7 +232,7 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-02</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999696343996-internship-deep-learning-and-ai-research'>Netatmo INTERNSHIP - Deep Learning and AI Research | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999696343996-internship-deep-learning-and-ai-research'>Netatmo INTERNSHIP - Deep Learning and AI Research | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
@@ -244,7 +244,7 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light">San Francisco, California  Seattle, Washington</span></p>
 <p>Posted on:: 2019-10-01</p>
 <hr/>
-<h5><a href='https://controlexpert.softgarden.io/job/5034347/Student-gn-f%C3%BCr-Masterarbeit-im-Bereich-Deep-Learning?jobDbPVId=13773137&amp;l=de'>Student (gn) f?r Masterarbeit im Bereich Deep Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://controlexpert.softgarden.io/job/5034347/Student-gn-f%C3%BCr-Masterarbeit-im-Bereich-Deep-Learning?jobDbPVId=13773137&amp;l=de'>Student (gn) f?r Masterarbeit im Bereich Deep Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-01</p>
 <hr/>
@@ -434,7 +434,7 @@ Clara, More... Software Intern, Math Libraries - CUDA | US, CA, Santa Clara.</p>
 <p><span class="badge badge-light">Kharkiv Oblast, Ukraine</span></p>
 <p>Posted on: 2019-09-06</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1855962'>Job Application for Sr. Software Engineer, AI and Deep Learning at ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1855962'>Job Application for Sr. Software Engineer, AI and Deep Learning at ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... We are offering a career opportunity combining both your passion and skills as a 
 software engineer while also allowing you to work with state-of-the-art?...</p>
@@ -462,7 +462,7 @@ learning to join the team at Thomson Reuters Labs in Zug. What do we do?</p>
 computer vision to enable a seamless grab-and-go retail experience. We differ 
 from?...</p>
 <hr/>
-<h5><a href='https://crisalix.workable.com/jobs/1109157'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/jobs/1109157'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 18, 2019 ... Experienced in Machine learning algorithms and implementations. Computer 
 Vision / Computational geometry. GIT version control (good knowledge). English
@@ -473,7 +473,7 @@ Vision / Computational geometry. GIT version control (good knowledge). English
 <p>Aug 18, 2019 ... Apply online for the job of Deep Learning Engineer with Strong iOS Development 
 Skills - Barcelona at Crisalix.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/RunAI1/743999693916907-full-stack-engineer-deep-learning-infrastructure-'>Run:AI Full Stack Engineer (Deep Learning infrastructure) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/RunAI1/743999693916907-full-stack-engineer-deep-learning-infrastructure-'>Run:AI Full Stack Engineer (Deep Learning infrastructure) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-25</p>
 <hr/>
@@ -485,7 +485,7 @@ Skills - Barcelona at Crisalix.</p>
 <p><span class="badge badge-light">St. Louis, Missouri  Seattle, Washington  Chicago, Illinois</span></p>
 <p>Posted on: 2019-08-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sertis/jobs/4017140002'>Job Application for Deep Learning Researcher (Computer Vision ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sertis/jobs/4017140002'>Job Application for Deep Learning Researcher (Computer Vision ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... You will be responsible for the research and development of cutting-edge AI and 
 machine learning algorithms, playing with state of the art deep learning models?...</p>
